using grunt-cover for tests

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "oe-cloud"
   ],
   "dependencies": {
-    "kafka-node": "^5.0.0"
+    "kafka-node": "5.0.0"
   },
   "devDependencies": {
     "babel-eslint": "7.2.3",
