--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oe-kafka",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "A oeCloud mixin which publishes to a configured Kafka Queue during Model CRUD operations",
   "main": "index.js",
   "scripts": {
@@ -35,8 +35,8 @@
     "istanbul": "0.4.5",
     "loopback-connector-mongodb": "3.9.2",
     "mocha": "5.2.0",
-    "oe-cloud": "git+http://evgit/oecloud.io/oe-cloud.git#master",
-    "oe-connector-postgresql": "git+http://evgit/oecloud.io/oe-connector-postgresql.git#master"
+    "oe-cloud": "git+http://evgit/oecloud.io/oe-cloud.git#2.3.0",
+    "oe-connector-postgresql": "git+http://evgit/oecloud.io/oe-connector-postgresql.git#2.3.0"
   },
   "repository": {
     "type": "git",
