--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "istanbul": "0.4.5",
     "loopback-connector-mongodb": "3.9.2",
     "mocha": "5.2.0",
-    "oe-cloud": "git+http://evgit/oecloud.io/oe-cloud.git#2.3.0",
-    "oe-connector-postgresql": "git+http://evgit/oecloud.io/oe-connector-postgresql.git#2.3.0"
+    "oe-cloud": "^2.0.0",
+    "oe-connector-postgresql": "^2.0.0"
   },
   "repository": {
     "type": "git",
-    "url": "http://evgit/oecloud.io/oe-kafka.git"
+    "url": "https://github.com/EdgeVerve/oe-kafka.git"
   }
 }
